fix alignment in home section

--- a/main.css
+++ b/main.css
@@ -1924,3 +1924,7 @@ body:not(.powercord) .panels-3wFtMD::after {
   background-color: var(--background-modifier-selected) !important;
   color: var(--background-tertiary) !important;
 }
+
+.privateChannels-oVe7HL .scroller-WSmht3 {
+  margin-top: 5px;
+}
